--- a/src/look.css
+++ b/src/look.css
@@ -12,3 +12,22 @@
 	margin-right: 35%;
 	
 }
+
+#label{
+	position: relative;
+	left: 10px;
+}
+#btnBerechnen{
+	position: relative;
+	left: 580px;
+	width: 100px;
+}
+#labelNetto{
+	position: relative;
+	left: 10px;
+	font-size: 20;
+}
+#netto{
+	position: relative;
+	left: 450px;
+}
